@@ -1,3 +1,9 @@
+2008-02-05  Jb Evain  <jbevain@novell.com>
+
+	* Mono.Cecil.Binary/DefaultImporter.cs:
+		Import modifiers and sentinels, patch from:
+		Andrea Carlo Ornstein <andrea.ornstein@st.com>
+
 2008-02-04  Jb Evain  <jbevain@novell.com>
 
 	* Mono.Cecil.Binary/CLIHeader.cs
